Putting back the copyright section

--- a/source/_views/_partials/menu.html
+++ b/source/_views/_partials/menu.html
@@ -36,4 +36,10 @@
         </ul>
     </section>-->
 
+    <ul id="copyright">
+        <li>&copy; Mike Simonson.</li>
+        <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+        <li>Powered by: <a href="http://sculpin.io">Sculpin</a></li>
+    </ul>
+
 </div>
