--- a/source/_views/_partials/post.html
+++ b/source/_views/_partials/post.html
@@ -26,20 +26,22 @@
 
     {% include '_partials/images.html' %}
 
-        {% if (page.previous_post or page.next_post) and homepage is not defined %}
-            <nav class="article">
-                <ul>
-                    {% if page.next_post %}
-                        <li>Next: <a class="next" href="{{ site.url }}{{ page.next_post.url }}" title="{{ page.next_post.title }}"><span class="title">{{ page.next_post.title }}</span></a></li>
-                    {% endif %}
-                    {% if page.previous_post %}
-                        <li>Previous: <a class="previous" href="{{ site.url }}{{ page.previous_post.url }}" title="{{ page.previous_post.title }}"><span class="title">{{ page.previous_post.title }}</span></a></li>
-                    {% endif %}
-                </ul>
-            </nav>
-        {% endif %}
-    </article>
+</article>
 
+<div class="pagination">
+    {% if (page.previous_post or page.next_post) and homepage is not defined %}
+    <nav class="article">
+        <ul>
+            {% if page.next_post %}
+            <li>Next: <a class="next" href="{{ site.url }}{{ page.next_post.url }}" title="{{ page.next_post.title }}"><span class="title">{{ page.next_post.title }}</span></a></li>
+            {% endif %}
+            {% if page.previous_post %}
+            <li>Previous: <a class="previous" href="{{ site.url }}{{ page.previous_post.url }}" title="{{ page.previous_post.title }}"><span class="title">{{ page.previous_post.title }}</span></a></li>
+            {% endif %}
+        </ul>
+    </nav>
+    {% endif %}
+</div>
 
 {% if site.disqus.shortname and site.disqus.shortname != '' %}
 <div id="disqus_thread"></div>
