--- a/source/_views/_partials/post.html
+++ b/source/_views/_partials/post.html
@@ -71,5 +71,4 @@
     <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered byDisqus.</a>
 </noscript>
 {% endif %}
-
-{% endblock %}
+{% endblock content_wrapper %}
