--- a/source/_views/default.html
+++ b/source/_views/default.html
@@ -29,13 +29,11 @@
         <link rel="stylesheet" href="{{ site.url }}/css/style-desktop.css" />
         <link rel="stylesheet" href="{{ site.url }}/css/style-wide.css" />
     </noscript>
+    <link rel="stylesheet" href="{{ site.url }}/components/highlightjs/styles/default.css" />
+    <script src="{{ site.url }}/components/highlightjs/highlight.pack.js"></script>
     <!--[if lte IE 8]><link rel="stylesheet" href="{{ site.url }}/css/ie/v8.css" /><![endif]-->
 
     <link rel="alternate" type="application/atom+xml" href="{{ site.url }}/atom.xml" title="{{ site.title }} activity feed" />
-    <style>
-        /** quick fix because bootstrap <pre> has a background-color. */
-        pre code { background-color: inherit; }
-    </style>
     {% block head_styles %}
     {% endblock %}
     {% block head_scripts %}
@@ -54,13 +52,18 @@
     <div id="content">
         <div class="inner">
             {% block content_wrapper %}{% block content %}{% endblock %}{% endblock %}
-
         </div>
     </div>
 
     {% include '_partials/menu.html' %}
 
 </div>
+<script type="application/javascript">
+$(document).ready(function() {
+    $('pre code').each(function(i, block) {
+        hljs.highlightBlock(block);
+    });
+});</script>
 {% if site.google_analytics_tracking_id %}
 <script type="text/javascript">
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
